--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
-  "private": true,
-  "start": "nodemon ./server.js --exec babel-node -e js",
+  "scripts": {
+    "start": "nodemon ./server.js --exec babel-node -e js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@apollo/server": "^4.7.5",
     "express": "^4.18.2",
-    "graphql": "^16.7.1"
+    "graphql": "^16.7.1",
+    "lodash.find": "^4.6.0",
+    "lodash.remove": "^4.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
