--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@apollo/server": "^4.7.5",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
+    "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
     "lodash.remove": "^4.7.0"
   },
